# mom

./: .clang-format  .gitattributes  .gitignore  AI_CONTEXT.md  CMakeLists.txt  DOCUMENTATION.md  FLUENT_UDF_COUPLING_ASSESSMENT.md  README.md
cmake/: MOMConfig.cmake.in
include/BrookesMoss/: BrookesMoss.hpp  BrookesMoss.tpp  BrookesMoss_Grammar.h
include/HMOM/: HMOM.hpp  HMOM.tpp  HMOM_Grammar.h
include/MOM/: AnyMomentMethod.hpp  AnyMomentMethod.tpp  Dispatch.hpp  MOM.hpp  MOMConfig.hpp  ManifestReader.hpp  MechanismAdapter.hpp  MomContext.hpp  MomVariantList.hpp  MomentMethodBase.hpp  MomentMethodBase.tpp  MomentMethodConcept.hpp  MomentMethodReporter.hpp  ProcessFlags.hpp  Properties.hpp  Sources.hpp  Splitting.hpp  ThermoProxy.hpp
include/MetalOxide/: MetalOxide.hpp  MetalOxide.tpp  MetalOxide_Grammar.h
include/NewVariant/: NewVariant.hpp  NewVariant.tpp
include/ThreeEquations/: ThreeEquations.hpp  ThreeEquations.tpp  ThreeEquations_Grammar.h
include/TiO2/: TiO2.hpp  TiO2.tpp  TiO2_Grammar.h
include/Utilities/: OutputFileColumns.h
src/BrookesMoss/: BrookesMoss.cpp  BrookesMoss_BasicThermoData.cpp  BrookesMoss_Grammar.cpp
src/HMOM/: HMOM.cpp  HMOM_BasicThermoData.cpp  HMOM_Grammar.cpp
src/MOM/: ManifestReader.cpp  MechanismAdapter.cpp  MomContext.cpp  ThermoProxy_OpenSMOKE.cpp
src/MetalOxide/: MetalOxide_BasicThermoData.cpp  MetalOxide_Grammar.cpp
src/ThreeEquations/: ThreeEquations.cpp  ThreeEquations_BasicThermoData.cpp  ThreeEquations_Grammar.cpp
src/TiO2/: TiO2.cpp  TiO2_BasicThermoData.cpp  TiO2_Grammar.cpp
src/Utilities/: OutputFileColumns.cpp
tests/: coag_closure_analysis.py  coag_negative_test.py  cond_closure_analysis.py  cond_negative_test.py  cunningham_diffusion_analysis.py  cunningham_diffusion_negative_test.py  g1_closure_analysis.py  g1_negative_test.py  nuc_closure_analysis.py  nuc_negative_test.py  o2ox_closure_analysis.py  o2ox_negative_test.py  ohox_closure_analysis.py  ohox_negative_test.py  reporter_usage_example.cpp  sg_closure_analysis.py  sg_negative_test.py  test_ThreeEquations.cpp  test_coagulation_fixture.cpp  test_condensation_fixture.cpp  test_cunningham_diffusion_fixture.cpp  test_dictionary_setup.cpp  test_hmom_dictionary_setup.cpp  test_loop_benchmark.cpp  test_manifest_fixture.hpp  test_manifest_reader.cpp  test_mechanism_adapter.cpp  test_mom_context.cpp  test_nucleation_fixture.cpp  test_o2_oxidation_fixture.cpp  test_oh_fixture.cpp  test_oh_oxidation_fixture.cpp  test_surface_growth_fixture.cpp  test_verify_all_variants.cpp
